# Multimodel-Agentic-Chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  chainlit.md  docker-compose.yml  pyproject.toml  start-llama-server.sh  start-tunnel.sh  teknik_rapor.txt
.chainlit/: config.toml
public/: custom.css
scripts/: verify_llm_runtime.py
src/: config.py  main.py  tts.py
src/agent/: graph.py  nodes.py  prompts.py  routing.py  state.py  web_search.py
src/api/: router.py
src/mcp/: mcp_client.py  mcp_config.json  server.py
src/middleware/: rate_limiter.py
src/persistence/: sqlite_data_layer.py
src/rag/: embeddings.py  ingest.py  llm.py  query_translation.py  reranker.py  retriever.py  semantic_cache.py  vectorstore.py
src/tools/: calculator.py  file_reader.py  mcp_bridge.py  search.py
tests/: test_rag_retriever.py  test_security.py
tests/manual/: 00_README.txt  01_direct_simple.txt  02_format_conciseness.txt  03_math_calculator.txt  04_turkish_bilingual.txt  05_rag_document.txt  06_web_search.txt  07_vision.txt  08_audio_stt.txt  09_routing_logic.txt  10_slash_commands.txt  11_settings_panel.txt  12_streaming_tts.txt  13_mcp_filesystem.txt  14_edge_cases.txt  15_history_resume.txt
